Added connection to Luis Engine

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "LuisAPIHostName": "westeurope.api.cognitive.microsoft.com",
-  "LuisAPIKey": "9adb6fa61ae0457c8657b608063fa687",
-  "LuisAppId": "58ecd96c-d80c-4073-9f25-53d76c932166",
-  "MicrosoftAppId": "6c32e5c6-3c26-4a46-9b13-1521d0c07a9f",
-  "MicrosoftAppPassword": "&L1[v6;]?JilTHTl[CRyaWv22z]h-",
-  "ScmType": "None"
+    "LuisAPIHostName": "westus.api.cognitive.microsoft.com",
+    "LuisAPIKey": "acae6eb52ca1427e9637c65da648dfd2",
+    "LuisAppId": "ffe96468-0baa-42aa-a7f2-3d55ca77ed13",
+    "MicrosoftAppId": "6c32e5c6-3c26-4a46-9b13-1521d0c07a9f",
+    "MicrosoftAppPassword": "&L1[v6;]?JilTHTl[CRyaWv22z]h-",
+    "ScmType": "None"
 }
