--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,8 @@
 {
-    "LuisAPIHostName": "westus.api.cognitive.microsoft.com",
-    "LuisAPIKey": "acae6eb52ca1427e9637c65da648dfd2",
-    "LuisAppId": "ffe96468-0baa-42aa-a7f2-3d55ca77ed13",
-    "MicrosoftAppId": "6c32e5c6-3c26-4a46-9b13-1521d0c07a9f",
-    "MicrosoftAppPassword": "&L1[v6;]?JilTHTl[CRyaWv22z]h-",
-    "ScmType": "None"
+  "LuisAPIHostName": "https://westus.api.cognitive.microsoft.com/luis/v2.0/apps/ffe96468-0baa-42aa-a7f2-3d55ca77ed13",
+  "LuisAPIKey": "acae6eb52ca1427e9637c65da648dfd2",
+  "LuisAppId": "ffe96468-0baa-42aa-a7f2-3d55ca77ed13",
+  "MicrosoftAppId": "6c32e5c6-3c26-4a46-9b13-1521d0c07a9f",
+  "MicrosoftAppPassword": "&L1[v6;]?JilTHTl[CRyaWv22z]h-",
+  "ScmType": "None"
 }
